--- a/index.html
+++ b/index.html
@@ -296,22 +296,23 @@
           <div class="model__head">
             <div>
               <h3>Casa Bromelia</h3>
-              <p class="model__headline">110 m² inicial · 170 m² con planta alta</p>
+              <p class="model__headline">110 m² / 170 m² </p>
             </div>
             <span class="badge">Familiar-Evolutiva</span>
           </div>
           <div class="model__layout">
             <aside class="model__details">
               <div class="description">
-                <p class="description__headline">Vivienda evolutiva.</p>
 
                 <div class="description__body">
-                  <p>Superficie inicial: 110 m².</p>
-                  <p>Superficie total con planta alta: 170 m².</p>
                   <p>Casa Bromelia es una vivienda evolutiva que permite construir una casa completa en planta baja y dejar prevista su ampliación futura en altura.</p>
-                  <p>En su etapa inicial cuenta con cocina, living–comedor, un dormitorio amplio, baño completo, galería semicubierta y espacio para cochera semicubierta. La planta baja incorpora además un ambiente previsto para futura escalera, que permite ampliar la vivienda sin intervenciones improvisadas.</p>
-                  <p>En su desarrollo en dos plantas, se incorporan en planta alta dos dormitorios y un baño, alcanzando una superficie total de 170 m², manteniendo coherencia funcional y constructiva.</p>
+                  <p>En su etapa inicial cuenta con cocina, living–comedor, un dormitorio amplio, baño completo, galería semicubierta y espacio para cochera semicubierta. La planta baja incorpora además un ambiente previsto para futura escalera, que permite ampliar la vivienda en planta alta agregando 2 dormitorios adicionales y un baño, manteniendo coherencia funcional y constructiva.</p>
+                  
                 </div>
+                <ul class="description__list">
+                  <li>Superficie inicial: 110 m².</li>
+                  <li>Superficie total con planta alta: 170 m².</li>
+                </ul>
               </div>
             </aside>
             <div class="model__content">
@@ -596,7 +597,7 @@
             <div class="media-dropdown dropdown">
               <button class="btn btn--ghost media-dropdown__toggle" type="button">Ver planos</button>
               <div class="media-dropdown__menu dropdown-menu" aria-label="Planos de Quincho AMZ I">
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop8/Planos/amsterdam-city-archives-9tmKEDz03uw-unsplash.jpg" data-media-type="plan">Plano principal</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop8Quincho/Planos/Imagen de WhatsApp 2025-12-19 a las 15.53.22_7a2aa29b.jpg" data-media-type="plan">Plano principal</a>
               </div>
             </div>
             <div class="media-dropdown dropdown">
