Update quincho description

--- a/index.html
+++ b/index.html
@@ -560,17 +560,16 @@
             <aside class="model__details">
               <div class="description">
                 
-                <p class="description__headline">86 m² dúplex con 2 dormitorios y 2 baños.</p>
+                <p class="description__headline">Espacio recreativo.</p>
 
                 <div class="description__body">
-                  <p>Planta baja libre tipo loft con visual abierta al patio.</p>
-                  <p>Dormitorios en planta alta para separar descanso de la vida social.</p>
+                  <p>Quincho diseñado como un espacio amplio y funcional, con cocina integrada y un área principal destinada a reuniones y uso social.</p>
+                  <p>La distribución prioriza la integración de los ambientes, con buena iluminación y ventanales que vinculan el interior con el exterior.</p>
+                  <p>Cuenta con baño completo, lo que permite su uso independiente y una organización general pensada para el confort y la versatilidad del espacio.</p>
                 </div>
 
                 <ul class="description__list">
-                  <li>Superficie: 86 m² totales.</li>
-                  <li>Ambientes: 2 dormitorios, 2 baños.</li>
-                  <li>Gran ventanal hacia patio privado para expandir el estar.</li>
+                  <li>Superficie: 50 m².</li>
                 </ul>
               </div>
             </aside>
