--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
           <div class="model__head">
             <div>
               <h3>Quincho AMZ I</h3>
-              <p class="model__headline">86 m2 · 2 dorm · 3 amb · 2 banos · Sin cochera</p>
+              <p class="model__headline">50 m2 · 1 baño </p>
             </div>
             <span class="badge">Quincho</span>
           </div>
@@ -568,10 +568,7 @@
                   <p>Cuenta con baño completo, lo que permite su uso independiente y una organización general pensada para el confort y la versatilidad del espacio.</p>
                 </div>
 
-                <ul class="description__list">
-                  <li>Superficie: 50 m².</li>
-                </ul>
-              </div>
+             
             </aside>
             <div class="model__content">
               <div class="model__visual" data-interval="3900">
