--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="method__text" aria-label="Descripción del sistema constructivo">
           <p>Nuestro sistema constructivo industrializado, basado en muros AMZ, permite desarrollar obras de manera eficiente y ordenada, resolviendo problemáticas habituales de la construcción convencional.</p>
           <p>A partir del proyecto se elabora un plano de ingeniería para la fabricación de los muros en planta industrial, incorporando las instalaciones de servicios durante el proceso y evitando intervenciones posteriores en obra. En el terreno se ejecuta la fundación según el proyecto, seguida del montaje de los muros AMZ, su vinculación a la estructura portante, la colocación de la cubierta y las terminaciones finales. El sistema constructivo aporta aislación térmica y acústica, junto con una reducción significativa de tiempos, desperdicios y errores constructivos.</p>
-          <p>Aplicable a viviendas y a otros tipos de obras, permite plazos de ejecución acotados: obra gris en aproximadamente un mes y obra llave en mano en alrededor de tres meses.</p>
+          <p>Aplicable a viviendas y a otros tipos de obras, permite plazos de ejecución acotados: obra gris en aproximadamente un mes y obra llave en mano en tres meses.</p>
         </div>
       </div>
     </section>
@@ -70,7 +70,7 @@
         </div>
 
         <div class="method__text" aria-label="Descripción de muros AMZ">
-          <p>Los muros MZ son fabricados en planta industrial conforme al proyecto y al desarrollo de ingeniería correspondiente. Aportan aislación térmica y acústica y permiten un alto nivel de control y precisión desde el inicio.</p>
+          <p>Los muros MZ son fabricados en planta industrial conforme al proyecto y desarrollo de ingeniería correspondiente. Aportan aislación térmica y acústica y permiten un alto nivel de control y precisión desde el inicio.</p>
           <p>Durante su fabricación se incorporan las instalaciones de agua, gas, electricidad y desagües, evitando trabajos posteriores en obra. Al tratarse de un proceso industrializado, el sistema reduce desperdicios y permite una obra limpia y ordenada.</p>
           <p>La tecnología aplicada en los muros permite eliminar revoques tradicionales, posibilitando la aplicación directa de pintura o del revestimiento final elegido, optimizando tiempos y recursos.</p>
           <p>Los muros AMZ son una solución versátil, aplicable tanto a obras de cualquier tipo como a terminaciones de edificios, cerramientos y tapiales, adaptándose a distintas escalas y necesidades constructivas.</p>
@@ -80,7 +80,7 @@
 
     <section class="section section--alt" id="modelos">
       <div class="section__header section__header--center">
-        <span class="label">Catalogo 2024</span>
+        <span class="label">Catálogo</span>
         <h2>Nuestros 8 modelos</h2>
       </div>
 
@@ -105,8 +105,9 @@
                       Vivienda compacta y funcional, diseñada para optimizar cada metro cuadrado.
                       Cuenta con cocina integrada, living-comedor, dos dormitorios y un baño completo.
                       Dispone de buena circulación interior, ventilación cruzada y doble acceso desde frente y contrafrente.
-                      Incluye espacios previstos para muebles de guardado, optimizando el uso del interior</p>
-                  <p>Formato compacto pensado para entrar rápido al lote y quedar habitable sin vueltas.</p>
+                      Incluye espacios previstos para muebles de guardado, optimizando el uso del interio
+                  </p>
+
                 </div>
 
                
