--- a/index.html
+++ b/index.html
@@ -141,15 +141,15 @@
             <div class="media-dropdown dropdown">
               <button class="btn btn--ghost media-dropdown__toggle" type="button">Ver planos</button>
               <div class="media-dropdown__menu dropdown-menu" aria-label="Planos de Casa Bixa">
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop1Bixa/Planos/plano_bixa_1" data-media-type="plan">Plano principal</a>
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop1Bixa/Planos/plano_bixa_2" data-media-type="plan">Plano principal</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop1Bixa/Planos/plano_bixa_1" data-media-type="plan">Plano 1</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop1Bixa/Planos/plano_bixa_2" data-media-type="plan">Plano 2</a>
               </div>
             </div>
             <div class="media-dropdown dropdown">
               <button class="btn media-dropdown__toggle" type="button">Ver video</button>
               <div class="media-dropdown__menu dropdown-menu" aria-label="Videos de Casa Bixa">
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop1Bixa/Videos/BIXA INTERIOR COMPLETO.mp4" data-media-type="video">Recorrido principal</a>
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop1Bixa/Videos/VIDEO BIXA EXTERIOR.mp4" data-media-type="video">Recorrido principal</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop1Bixa/Videos/BIXA INTERIOR COMPLETO.mp4" data-media-type="video">Recorrido interior</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop1Bixa/Videos/VIDEO BIXA EXTERIOR.mp4" data-media-type="video">Recorrido exterior</a>
               </div>
             </div>
           </div>
@@ -217,11 +217,12 @@
             <div class="media-dropdown dropdown">
               <button class="btn btn--ghost media-dropdown__toggle" type="button">Ver planos</button>
               <div class="media-dropdown__menu dropdown-menu" aria-label="Planos de Casa Camelia">
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop2Camelia/Planos/1.jpeg" data-media-type="plan">Plano 1</a>
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop2Camelia/Planos/2.jpeg" data-media-type="plan">Plano 2</a>
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop2Camelia/Planos/3.jpeg" data-media-type="plan">Plano 3</a>
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop2Camelia/Planos/4.jpeg" data-media-type="plan">Plano 4</a>
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop2Camelia/Planos/5.jpeg" data-media-type="plan">Plano 5</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop2Camelia/Planos/5.jpeg" data-media-type="plan">Plano 1</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop2Camelia/Planos/1.jpeg" data-media-type="plan">Plano 2</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop2Camelia/Planos/4.jpeg" data-media-type="plan">Plano 3</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop2Camelia/Planos/2.jpeg" data-media-type="plan">Plano 4</a>
+
+
               </div>
             </div>
             <div class="media-dropdown dropdown">
@@ -246,7 +247,7 @@
             <aside class="model__details">
               <div class="description">
                 <div class="description__body">
-                  <p>Vivienda unifamiliar de planta compacta con espacios unificados, que integra living–comedor y cocina en un área continua y funcional. Presenta ventilación e iluminación, con puerta-balcón que vincula el espacio interior con la galería semicubierta, la cual puede utilizarse como espacio para guardado de vehículo.</p>
+                  <p>Vivienda de planta baja con espacios unificados, que integra living–comedor y cocina en un área continua y funcional. Presenta ventilación e iluminación, con puerta-balcón que vincula el espacio interior con la galería semicubierta, la cual puede utilizarse como espacio para guardado de vehículo.</p>
                   <p>Cuenta con dos dormitorios con espacios previstos para placares y baño completo, con una distribución que prioriza la funcionalidad y el aprovechamiento del espacio.</p>
                   <p>Superficie total: 75 m²</p>
                   <p>Superficie cubierta: 62 m²</p>
@@ -279,14 +280,15 @@
             <div class="media-dropdown dropdown">
               <button class="btn btn--ghost media-dropdown__toggle" type="button">Ver planos</button>
               <div class="media-dropdown__menu dropdown-menu" aria-label="Planos de Casa Belladona">
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop3Belladona/Planos/1" data-media-type="plan">Plano principal</a>
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop3Belladona/Planos/2" data-media-type="plan">Plano principal</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop3Belladona/Planos/1" data-media-type="plan">Plano 1</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop3Belladona/Planos/2" data-media-type="plan">Plano 2</a>
               </div>
             </div>
             <div class="media-dropdown dropdown">
               <button class="btn media-dropdown__toggle" type="button">Ver video</button>
               <div class="media-dropdown__menu dropdown-menu" aria-label="Videos de Casa Belladona">
                 <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop3Belladona/Videos/VIDEO BELLA DONNA EXT.mp4" data-media-type="video">Recorrido exterior</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop3Belladona/Videos/VIDEO BELLA DONNA INT (1).mp4" data-media-type="video">Recorrido interior</a>
               </div>
             </div>
           </div>
@@ -501,7 +503,7 @@
                 <p class="description__headline"></p>
 
                 <div class="description__body">
-                  <p>AMZ Viviendas Premium se desarrollan a partir de una planta baja cuidadosamente diseñada, que funciona como base arquitectónica del proyecto.</p>
+                  <p>EL concepto de Vivienda Premium AMZ se desarrolla a partir de una planta baja cuidadosamente diseñada, que funciona como base arquitectónica del proyecto.</p>
                   <p>La línea cuenta con dos modelos de planta baja definidos:</p>
                 </div>
 
@@ -511,7 +513,7 @@
                 </ul>
                 <div class="description__body">
                   <p>A partir de estas plantas bajas, la vivienda se completa con una planta alta seleccionada a medida, dentro de una línea de más de 10 modelos disponibles, con distintas distribuciones, superficies y cantidad de dormitorios.</p>
-                  <p>Para conocer las diferentes opciones de planta alta, contactanos.</p>
+                  <p>Para conocer las diferentes opciones de planta alta, contactános.</p>
                 </div>
               </div>
             </aside>
@@ -521,8 +523,6 @@
                 <img class="slide active" src="https://pruebasnb.cloud/Multimedia/Prop7Premium/Render/3" alt="Casa Rio render exterior">
                 <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop7Premium/Render/2" alt="Casa Rio render interior">
                 <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop7Premium/Render/1" alt="Casa Rio living">
-                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop7Premium/Render/Captura de Pantalla 2025-12-19 a la(s) 12.45.57.png" alt="Casa Rio living">
-                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop7Premium/Render/Captura de Pantalla 2025-12-19 a la(s) 12.46.38.png" alt="Casa Rio living">
                 </div>
               </div>
             </div>
@@ -535,8 +535,8 @@
             <div class="media-dropdown dropdown">
               <button class="btn btn--ghost media-dropdown__toggle" type="button">Ver planos</button>
               <div class="media-dropdown__menu dropdown-menu" aria-label="Planos de Casa Rio">
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop7Premium/Planos/Captura de Pantalla 2025-12-19 a la(s) 11.41.53.png" data-media-type="plan">Plano principal</a>
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop7Premium/Planos/Captura de Pantalla 2025-12-19 a la(s) 11.45.09.png" data-media-type="plan">Plano principal</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop7Premium/Planos/" data-media-type="plan">Plano principal</a>
+                
               </div>
             </div>
             <div class="media-dropdown dropdown">
