Update Complejo AMZ inversion description

--- a/index.html
+++ b/index.html
@@ -412,26 +412,35 @@
         <article class="model">
           <div class="model__head">
             <div>
-              <h3>Casa Amz I · Desarrollo Recidencial</h3>
-              <p class="model__headline">132 m2 · 3 dorm · 5 amb · 3 banos · Semi-cubierta</p>
+              <h3>COMPLEJO AMZ – LÍNEA INVERSIÓN</h3>
+              <p class="model__headline">Conjunto habitacional para inversión y renta</p>
             </div>
             <span class="badge">Refugio</span>
           </div>
           <div class="model__layout">
             <aside class="model__details">
               <div class="description">
-                <span class="description__tag">Ficha rápida</span>
-                <p class="description__headline">132 m² con 3 dormitorios, 3 baños y semicubierta.</p>
+                <p class="description__headline">Conjunto habitacional desarrollado en planta baja, concebido como una solución para inversión y renta.</p>
 
                 <div class="description__body">
-                  <p>Volúmenes escalonados con revestimientos cálidos pensados para climas fríos.</p>
-                  <p>Grandes paños hacia el sol, circulación semicubierta y espacios listos para chimenea.</p>
+                  <p>Se compone de dos tipologías de unidades:</p>
+                  <p><strong>Unidades Tipo A</strong></p>
                 </div>
 
                 <ul class="description__list">
-                  <li>Superficie: 132 m² totales.</li>
-                  <li>Programa: 3 dormitorios, 3 baños y semicubierta para autos.</li>
-                  <li>Ideal para desarrollos de 4 unidades para inversión o renta.</li>
+                  <li>Superficie total: 83 m²</li>
+                  <li>Superficie cubierta y semicubierta: 61 m² (55 m² cubiertos + 6 m² semicubiertos)</li>
+                  <li>Unidad en esquina, con dos dormitorios, baño, living–comedor y cocina, con jardín y espacio para vehículo.</li>
+                </ul>
+
+                <div class="description__body">
+                  <p><strong>Unidades Tipo B</strong></p>
+                </div>
+
+                <ul class="description__list">
+                  <li>Superficie total: 51 m²</li>
+                  <li>Superficie cubierta y semicubierta: 38 m² (32 m² cubiertos + 6 m² semicubiertos)</li>
+                  <li>Unidad de un dormitorio, con living–comedor y cocina, con jardín y espacio para vehículo.</li>
                 </ul>
               </div>
             </aside>
