--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="#muros" class="nav__link">Muros AMZ</a>
         <div class="page-title">PORTFOLIO</div>
         <a href="#modelos" class="nav__link">Modelos</a>
-        <a href="#modelos" class="nav__link">Obras</a>
+        <a href="#modelos" class="nav__link"></a>
       </nav>
 
       <a href="#contacto" class="nav__link nav__link--cta nav__link--contact">Contactar</a>
@@ -421,9 +421,9 @@
             <aside class="model__details">
               <div class="description">
                 <p class="description__headline">Conjunto habitacional desarrollado en planta baja, concebido como una solución para inversión y renta.</p>
-
+                <p>Se compone de dos tipologías de unidades:</p>
                 <div class="description__body">
-                  <p>Se compone de dos tipologías de unidades:</p>
+                  
                   <p><strong>Unidades Tipo A</strong></p>
                 </div>
 
