--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
           <div class="model__head">
             <div>
               <h3>Casa Bromelia</h3>
-              <p class="model__headline">110 m² / 170 m² </p>
+              <p class="model__headline">132 m² / 172 m² </p>
             </div>
             <span class="badge">Familiar-Evolutiva</span>
           </div>
@@ -313,8 +313,9 @@
                   
                 </div>
                 <ul class="description__list">
-                  <li>Superficie inicial: 110 m².</li>
-                  <li>Superficie total con planta alta: 170 m².</li>
+                  <li>Sup total PB 132 m2</li>
+                  <li>Sup total con PA 172 m2</li>
+
                 </ul>
               </div>
             </aside>
@@ -343,7 +344,7 @@
             <div class="media-dropdown dropdown">
               <button class="btn btn--ghost media-dropdown__toggle" type="button">Ver planos</button>
               <div class="media-dropdown__menu dropdown-menu" aria-label="Planos de Casa Bromelia">
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop4Bromelia/Planos/Imagen de WhatsApp 2025-12-19 a las 15.34.02_e4386716.jpg" data-media-type="plan">Plano principal</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop4Bromelia/Planos/1.Bromelia.jpeg" data-media-type="plan">Plano principal</a>
               </div>
             </div>
             <div class="media-dropdown dropdown">
@@ -396,7 +397,7 @@
             <div class="media-dropdown dropdown">
               <button class="btn btn--ghost media-dropdown__toggle" type="button">Ver planos</button>
               <div class="media-dropdown__menu dropdown-menu" aria-label="Planos de Casa Dionizia">
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop5Dionizia/Planos/Imagen de WhatsApp 2025-12-17 a las 12.38.22_390afa36.jpg" data-media-type="plan">Plano principal</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop5Dionizia/Planos/Dinizia.jpeg" data-media-type="plan">Plano principal</a>
               </div>
             </div>
             <div class="media-dropdown dropdown">
