--- a/index.html
+++ b/index.html
@@ -141,8 +141,7 @@
             <div class="media-dropdown dropdown">
               <button class="btn btn--ghost media-dropdown__toggle" type="button">Ver planos</button>
               <div class="media-dropdown__menu dropdown-menu" aria-label="Planos de Casa Bixa">
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop1Bixa/Planos/plano_bixa_1" data-media-type="plan">Plano 1</a>
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop1Bixa/Planos/plano_bixa_2" data-media-type="plan">Plano 2</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop1Bixa/Planos/Bixa.jpeg" data-media-type="plan">Plano 1</a>
               </div>
             </div>
             <div class="media-dropdown dropdown">
@@ -169,16 +168,15 @@
               <div class="description">
                 <p>Casa Camelia es una vivienda evolutiva que permite comenzar con una casa de 1 dormitorio y, con el tiempo y según la necesidad del cliente, ampliarla a 2 o 3 dormitorios. Las ampliaciones están previstas desde el proyecto original, por lo que el crecimiento se realiza de forma ordenada, coherente y sin modificaciones improvisadas, manteniendo la estética y la funcionalidad de la vivienda.</p>
                 <p>Etapas de crecimiento</p>
-                <p>
-                Casa Camelia 1 – Etapa inicial
+                <p>Camelia 1 – Etapa inicial
                 45 m² cubiertos. Living–comedor, cocina, 1 dormitorio y baño completo.
                 Galería semicubierta con asador de 19 m², apta cochera.
                 </p > 
-                <p>Casa Camelia 2 – Primera ampliación
+                <p>Camelia 2 – Primera ampliación
                 Incorpora un segundo dormitorio.
                 Superficie cubierta total: 58 m².
                 </p>
-                <p>Casa Camelia 3 – Ampliación final
+                <p>Camelia 3 – Ampliación final
                 Incorpora un tercer dormitorio.
                 Superficie cubierta total: 71 m².
                 </p>
@@ -361,7 +359,7 @@
           <div class="model__head">
             <div>
               <h3>Casa Dinizia</h3>
-              <p class="model__headline">137 m2 · 3 dorm · 2 baños </p>
+              <p class="model__headline">205 m2 · 3 dorm · 2 baños </p>
             </div>
             <span class="badge">Familiar</span>
           </div>
