--- a/index.html
+++ b/index.html
@@ -215,10 +215,7 @@
             <div class="media-dropdown dropdown">
               <button class="btn btn--ghost media-dropdown__toggle" type="button">Ver planos</button>
               <div class="media-dropdown__menu dropdown-menu" aria-label="Planos de Casa Camelia">
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop2Camelia/Planos/5.jpeg" data-media-type="plan">Plano 1</a>
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop2Camelia/Planos/1.jpeg" data-media-type="plan">Plano 2</a>
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop2Camelia/Planos/4.jpeg" data-media-type="plan">Plano 3</a>
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop2Camelia/Planos/2.jpeg" data-media-type="plan">Plano 4</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop2Camelia/Planos/Camelia.jpeg" data-media-type="plan">Plano 1</a>
 
 
               </div>
@@ -278,8 +275,7 @@
             <div class="media-dropdown dropdown">
               <button class="btn btn--ghost media-dropdown__toggle" type="button">Ver planos</button>
               <div class="media-dropdown__menu dropdown-menu" aria-label="Planos de Casa Belladona">
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop3Belladona/Planos/1" data-media-type="plan">Plano 1</a>
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop3Belladona/Planos/2" data-media-type="plan">Plano 2</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop3Belladona/Planos/Belladona.jpeg" data-media-type="plan">Plano 1</a>
               </div>
             </div>
             <div class="media-dropdown dropdown">
@@ -427,8 +423,8 @@
                 </div>
 
                 <ul class="description__list">
-                  <li>Superficie total: 83 m²</li>
-                  <li>Superficie cubierta y semicubierta: 61 m² (55 m² cubiertos + 6 m² semicubiertos)</li>
+                  <li>Superficie total: 86 m²</li>
+                  <li>Superficie cubierta 55 m²</li>
                   <li>Unidad en esquina, con dos dormitorios, baño, living–comedor y cocina, con jardín y espacio para vehículo.</li>
                 </ul>
 
@@ -438,7 +434,7 @@
 
                 <ul class="description__list">
                   <li>Superficie total: 51 m²</li>
-                  <li>Superficie cubierta y semicubierta: 38 m² (32 m² cubiertos + 6 m² semicubiertos)</li>
+                  <li>Superficie cubierta 32 m²</li>
                   <li>Unidad de un dormitorio, con living–comedor y cocina, con jardín y espacio para vehículo.</li>
                 </ul>
               </div>
@@ -483,7 +479,7 @@
             <div class="media-dropdown dropdown">
               <button class="btn btn--ghost media-dropdown__toggle" type="button">Ver planos</button>
               <div class="media-dropdown__menu dropdown-menu" aria-label="Planos de Casa Patagonia">
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop6/Planos/amsterdam-city-archives-9tmKEDz03uw-unsplash.jpg" data-media-type="plan">Plano principal</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop6AMZI/Planos/Complejo AMZ 1.jpeg" data-media-type="plan">Plano principal</a>
               </div>
             </div>
             <div class="media-dropdown dropdown">
@@ -602,7 +598,7 @@
             <div class="media-dropdown dropdown">
               <button class="btn btn--ghost media-dropdown__toggle" type="button">Ver planos</button>
               <div class="media-dropdown__menu dropdown-menu" aria-label="Planos de Quincho AMZ I">
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop8Quincho/Planos/Imagen de WhatsApp 2025-12-19 a las 15.53.22_7a2aa29b.jpg" data-media-type="plan">Plano principal</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop8Quincho/Planos/Quincho.jpeg" data-media-type="plan">Plano principal</a>
               </div>
             </div>
             <div class="media-dropdown dropdown">
