--- a/index.html
+++ b/index.html
@@ -512,9 +512,9 @@
                 </div>
 
                 <ul class="description__list">
-                  <li>Modelo planta baja 1.1 : Sup total 124 m2 </li>
-                  <li>Modelo planta baja 1.2: Sup total 101 m²</li>
-                  <li>Modelo planta baja 1.3: Sup total 70,57 m²</li>
+                  <li>Modelo planta baja 1: Sup total 101 m²</li>
+                  <li>Modelo planta baja 2 : Sup total 124 m2 </li>
+                  <li>Modelo planta baja 3: Sup total 126 m²</li>
                 </ul>
                 <div class="description__body">
                   <p>A partir de estas plantas bajas, la vivienda se completa con una planta alta seleccionada a medida, dentro de una línea de más de 10 modelos disponibles, con distintas distribuciones, superficies y cantidad de dormitorios.</p>
@@ -540,8 +540,9 @@
             <div class="media-dropdown dropdown">
               <button class="btn btn--ghost media-dropdown__toggle" type="button">Ver planos</button>
               <div class="media-dropdown__menu dropdown-menu" aria-label="Planos de Casa Rio">
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop7Premium/Planos/P_A_PB.jpg" data-media-type="plan">Plano principal</a>
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop7Premium/Planos/1.3_page-0001.jpg" data-media-type="plan">Plano principal</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop7Premium/Planos/1.1.jpeg" data-media-type="plan">Plano principal</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop7Premium/Planos/1.2.jpg" data-media-type="plan">Plano principal</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop7Premium/Planos/1.3_page-001.jpg" data-media-type="plan">Plano principal</a>
               </div>
             </div>
             <div class="media-dropdown dropdown">
