--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
           <div class="model__head">
             <div>
               <h3>Vivienda Premium AMZ</h3>
-              <p class="model__headline">170 m2</p>
+              <p class="model__headline"></p>
             </div>
             <span class="badge">Premium</span>
           </div>
