Add obras section with image gallery

--- a/index.html
+++ b/index.html
@@ -616,6 +616,32 @@
       </div>
     </section>
 
+    <section class="section section--works" id="obras">
+      <div class="section__header section__header--center">
+        <span class="label">Obras</span>
+        <h2>Obras realizadas con el Sistema AMZ</h2>
+        <p>Recorré algunos proyectos ejecutados y conocé cómo se integran nuestros sistemas constructivos en obras reales.</p>
+      </div>
+
+      <div class="works">
+        <div class="works__intro">
+          <p>Desde viviendas familiares hasta espacios recreativos, cada obra se planifica con precisión industrial y se ejecuta con plazos acotados, manteniendo la estética y el confort como prioridad.</p>
+        </div>
+
+        <div class="works__gallery">
+          <div class="model__visual works__visual" data-interval="4200">
+            <div class="model__gallery">
+              <img class="slide active" src="https://pruebasnb.cloud/Multimedia/Prop1Bixa/Render/11.FACHADA3.jpg" alt="Obra AMZ en fachada principal">
+              <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop2Camelia/Render/19.Camelia (Completa) Vista aerea.jpg" alt="Obra AMZ vista aérea">
+              <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop3Belladona/Render/1.FACHADA BELLA DONNAL 1.jpg" alt="Obra AMZ en entorno natural">
+              <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop5Jarilla/Render/1.1.jpg" alt="Obra AMZ terminaciones exteriores">
+              <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop8Quincho/Render/1.EXTERIOR1.jpg" alt="Obra AMZ quincho exterior">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="cta" id="contacto">
       <h2>¿Listo para construir?</h2>
       <p>Contactános y te asesoramos sobre la mejor alternativa para tu proyecto.</p>
