--- a/index.html
+++ b/index.html
@@ -637,6 +637,7 @@
               <img class="slide active" src="https://pruebasnb.cloud/Multimedia/Obras/2.jpg" alt="Obra AMZ en fachada principal">
               <img class="slide active" src="https://pruebasnb.cloud/Multimedia/Obras/3.jpg" alt="Obra AMZ en fachada principal">
               <img class="slide active" src="https://pruebasnb.cloud/Multimedia/Obras/4.jpg" alt="Obra AMZ en fachada principal">
+              <!-- Para agregar videos, usar la etiqueta <video class="slide"> con un <source> MP4 -->
               
               <img class="slide active" src="https://pruebasnb.cloud/Multimedia/Obras/10.jpg" alt="Obra AMZ en fachada principal">
               
@@ -702,6 +703,7 @@
 
       <footer class="media-viewer__footer">
         <span class="media-viewer__counter" id="mediaViewerCounter"></span>
+        <a class="media-viewer__download" id="mediaViewerDownload" href="#" download>Descargar</a>
       </footer>
     </div>
   </div>
@@ -843,6 +845,7 @@
   const mediaViewerContent = document.getElementById('mediaViewerContent');
   const mediaViewerCounter = document.getElementById('mediaViewerCounter');
   const mediaViewerTitle = document.getElementById('mediaViewerTitle');
+  const mediaViewerDownload = document.getElementById('mediaViewerDownload');
   const mediaViewerClose = mediaViewer.querySelector('.media-viewer__close');
   const mediaViewerPrev = mediaViewer.querySelector('.media-viewer__nav--prev');
   const mediaViewerNext = mediaViewer.querySelector('.media-viewer__nav--next');
@@ -904,7 +907,6 @@
       video.autoplay = true;
       video.playsInline = true;
       video.preload = 'metadata';
-      video.setAttribute('controlsList', 'nodownload');
       mediaViewerContent.appendChild(video);
     } else {
       const image = document.createElement('img');
@@ -917,6 +919,10 @@
 
     mediaViewerTitle.textContent = media.title || 'Contenido';
     mediaViewerCounter.textContent = `${currentMediaIndex + 1} / ${currentMediaItems.length}`;
+    if (mediaViewerDownload) {
+      mediaViewerDownload.href = media.src;
+      mediaViewerDownload.setAttribute('download', '');
+    }
   }
 
   function openMediaViewer(items, index = 0) {
@@ -948,11 +954,31 @@
 
   // Agregar eventos de clic a todas las imágenes de las galerías
   galleries.forEach((visual) => {
-    const galleryImages = Array.from(visual.querySelectorAll('.slide'));
+    const gallerySlides = Array.from(visual.querySelectorAll('.slide'));
 
-    galleryImages.forEach((img, index) => {
+    if (visual.classList.contains('works__visual')) {
+      const mediaItems = gallerySlides.map((slide) => {
+        const isVideo = slide.tagName.toLowerCase() === 'video';
+        const source = slide.currentSrc || slide.src || slide.querySelector('source')?.src || '';
+        return {
+          type: isVideo ? 'video' : 'image',
+          src: source,
+          title: slide.getAttribute('aria-label') || slide.getAttribute('alt') || 'Obra'
+        };
+      });
+
+      gallerySlides.forEach((slide, index) => {
+        slide.addEventListener('click', () => {
+          openMediaViewer(mediaItems, index);
+        });
+      });
+
+      return;
+    }
+
+    gallerySlides.forEach((img, index) => {
       img.addEventListener('click', () => {
-        openFullscreen(galleryImages, index);
+        openFullscreen(gallerySlides, index);
       });
     });
   });
