--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="#muros" class="nav__link">Muros AMZ</a>
         <div class="page-title">PORTFOLIO</div>
         <a href="#modelos" class="nav__link">Modelos</a>
-        <a href="#modelos" class="nav__link"></a>
+        <a href="#Obras" class="nav__link">Obras</a>
       </nav>
 
       <a href="#contacto" class="nav__link nav__link--cta nav__link--contact">Contactar</a>
@@ -639,11 +639,12 @@
               <img class="slide" src="https://pruebasnb.cloud/Multimedia/Obras/1.jpg" alt="Obra AMZ en fachada principal">
               <img class="slide" src="https://pruebasnb.cloud/Multimedia/Obras/2.jpg" alt="Obra AMZ en fachada principal">
               <img class="slide" src="https://pruebasnb.cloud/Multimedia/Obras/3.jpg" alt="Obra AMZ en fachada principal">
+              <img class="slide" src="https://pruebasnb.cloud/Multimedia/Obras/4.jpg" alt="Obra AMZ en fachada principal">
 
               <video class="slide" muted loop playsinline preload="metadata" aria-label="Obra AMZ en video">
-                <source src="https://pruebasnb.cloud/Multimedia/Obras/4.MP4" type="video/mp4">
+                <source src="https://pruebasnb.cloud/Multimedia/Obras/5.MP4" type="video/mp4">
               </video>
-              <img class="slide" src="https://pruebasnb.cloud/Multimedia/Obras/5.jpg" alt="Obra AMZ en fachada principal">
+
               <img class="slide" src="https://pruebasnb.cloud/Multimedia/Obras/6.jpg" alt="Obra AMZ en fachada principal">
               <video class="slide" muted loop playsinline preload="metadata" aria-label="Obra AMZ en video">
                 <source src="https://pruebasnb.cloud/Multimedia/Obras/7.MP4" type="video/mp4">
