--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="#muros" class="nav__link">Muros AMZ</a>
         <div class="page-title">PORTFOLIO</div>
         <a href="#modelos" class="nav__link">Modelos</a>
-        <a href="#Obras" class="nav__link">Obras</a>
+        <a href="#obras" class="nav__link">Obras</a>
       </nav>
 
       <a href="#contacto" class="nav__link nav__link--cta nav__link--contact">Contactar</a>
