--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <div class="media-dropdown dropdown">
               <button class="btn btn--ghost media-dropdown__toggle" type="button">Ver planos</button>
               <div class="media-dropdown__menu dropdown-menu" aria-label="Planos de Casa Bixa">
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop1Bixa/Planos/Bixa.jpeg" data-media-type="plan">Plano 1</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop1Bixa/Planos/Bixa.jpeg" data-media-type="plan">Plano principal</a>
               </div>
             </div>
             <div class="media-dropdown dropdown">
@@ -220,7 +220,7 @@
             <div class="media-dropdown dropdown">
               <button class="btn btn--ghost media-dropdown__toggle" type="button">Ver planos</button>
               <div class="media-dropdown__menu dropdown-menu" aria-label="Planos de Casa Camelia">
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop2Camelia/Planos/Camelia.jpeg" data-media-type="plan">Plano 1</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop2Camelia/Planos/Camelia.jpeg" data-media-type="plan">Plano principal</a>
 
 
               </div>
@@ -280,7 +280,7 @@
             <div class="media-dropdown dropdown">
               <button class="btn btn--ghost media-dropdown__toggle" type="button">Ver planos</button>
               <div class="media-dropdown__menu dropdown-menu" aria-label="Planos de Casa Belladona">
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop3Belladona/Planos/Belladona.jpeg" data-media-type="plan">Plano 1</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop3Belladona/Planos/Belladona.jpeg" data-media-type="plan">Plano principal</a>
               </div>
             </div>
             <div class="media-dropdown dropdown">
@@ -545,9 +545,9 @@
             <div class="media-dropdown dropdown">
               <button class="btn btn--ghost media-dropdown__toggle" type="button">Ver planos</button>
               <div class="media-dropdown__menu dropdown-menu" aria-label="Planos de Casa Rio">
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop7Premium/Planos/1.1.jpeg" data-media-type="plan">Plano principal</a>
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop7Premium/Planos/1.2.jpg" data-media-type="plan">Plano principal</a>
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop7Premium/Planos/1.3_page-001.jpg" data-media-type="plan">Plano principal</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop7Premium/Planos/1.1.jpeg" data-media-type="plan">Plano 1</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop7Premium/Planos/1.2.jpg" data-media-type="plan">Plano 2</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop7Premium/Planos/1.3_page-001.jpg" data-media-type="plan">Plano 3</a>
               </div>
             </div>
             <div class="media-dropdown dropdown">
